Review Request 11337 see PLS-4478 - when you go to a page from the segment list it now has a proper breadcrumb and goes to account tab - when jamey looks at the datacloud page he will no longer complain about the spacing

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -1,4 +1,5 @@
-.enrichment-wizard-container {
+.enrichment-wizard-container,
+.lookup-summary.container {
     padding: 0;
     @media (max-width: 1300px) {
         padding: 0 2.12766%;
@@ -7,9 +8,12 @@
         background: none; // override _progress.scss
     }
 }
-.open-nav .enrichment-wizard-container {
-    @media (max-width: 1491px) {
-        padding: 0 2.12766%;
+.open-nav { 
+    .enrichment-wizard-container,
+    .lookup-summary.container {
+        @media (max-width: 1491px) {
+            padding: 0 2.12766%;
+        }
     }
 }
 .enrichment-wizard-container {
@@ -70,7 +74,6 @@
     .filters {
         @include flex-container;
         padding-bottom: 10px;
-        margin-right: 14px;
         input[type="radio"], input[type="checkbox"] {
             margin: 0;
             vertical-align: middle;
@@ -189,7 +192,6 @@
 
         pd-pagination-controls .pd-pagination {
             text-align: right;
-            margin-right: 15px;
         }
     }
 
@@ -208,6 +210,9 @@
                 @include flex-item(0 0 auto);
                 width: $box-width;
                 padding: 10px 14px 0 0;
+                &:nth-child(3n) {
+                    padding-right: 0;
+                }
                 .box-inner {
                     position: relative;
                     background-color: white;
@@ -267,6 +272,9 @@
             .category {
                 width: 50px;
                 max-width: 30%;
+                &:last-child {
+                    padding-right: 0;
+                }
                 h2 {
                     margin-top: 10px;
                 }
@@ -711,6 +719,9 @@
             @include flex-container;
             width: $box-width;
             padding: 14px 14px 0 0;
+            &:nth-child(3n) {
+                padding-right: 0;
+            }
             &.box-value-no {
                 opacity: .5;
             }
