--- a/le-ui/projects/common/components/datacloud/lookup/lookup.component.scss
+++ b/le-ui/projects/common/components/datacloud/lookup/lookup.component.scss
@@ -1,6 +1,8 @@
 .lookup-summary {
     position: relative;
-    
+    margin: 0 auto;
+    padding: 0 2.12766%;
+
     pre {
         padding: 0 0 0 1em;
         white-space: pre-wrap;
